--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -1,15 +1,15 @@
 <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" >ngEvents</a>
+        <a class="navbar-brand" routerLinkActive="active" >ngEvents</a>
       </div>
   
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li>
-            <a [routerLink]="['/events']" >All Events</a>
+            <a [routerLink]="['/events']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Events</a>
           </li>
-          <li><a href="" [routerLink]="['/events/new']">Create Event</a></li>
+          <li><a href="" [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
               Events
@@ -25,7 +25,7 @@
         <div class="navbar-header navbar-right">
           <ul class="nav navbar-nav">
             <li>
-              <a>Welcome Karan</a>
+              <a [routerLink]="['/user/profile']">Welcome Karan</a>
             </li>
           </ul>
         </div>
