--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -1,43 +1,54 @@
 <div class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" routerLinkActive="active" >ngEvents</a>
-      </div>
-  
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li>
-            <a [routerLink]="['/events']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Events</a>
-          </li>
-          <li><a href="" [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
-              Events
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li >
-                <a href="">Angular Connect</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <div class="navbar-header navbar-right">
-          <ul class="nav navbar-nav">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLinkActive="active">ngEvents</a>
+    </div>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li>
+          <a [routerLink]="['/events']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All
+            Events</a>
+        </li>
+        <li><a href="" [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Events
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
             <li>
-              <a *ngIf="!authService.isAuthenticated()" [routerLink]="['/user/login']">Login</a>
-              <a *ngIf="authService.isAuthenticated()" [routerLink]="['/user/profile']">Welcome {{authService.currentUser.firstName}}</a>
+              <a href="">Angular Connect</a>
             </li>
           </ul>
-        </div>
-        <form id="searchForm"  class="navbar-form navbar-right"  >
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search Sessions" >
-          </div>
-          <button class="btn btn-default" >
-            Search
-          </button>
-        </form>
+        </li>
+      </ul>
+      <div class="navbar-header navbar-right">
+        <ul class="nav navbar-nav">
+          <li>
+            <a *ngIf="!authService.isAuthenticated()" [routerLink]="['/user/login']">Login</a>
+            <a *ngIf="authService.isAuthenticated()" [routerLink]="['/user/profile']">Welcome
+              {{authService.currentUser.firstName}}</a>
+          </li>
+        </ul>
       </div>
+      <form id="searchForm" class="navbar-form navbar-right" (ngSubmit)="searchSessions(searchTerm)">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search Sessions" [(ngModel)]="searchTerm"
+            name="searchTerm">
+        </div>
+        <button class="btn btn-default">
+          Search
+        </button>
+      </form>
     </div>
-  </div>  
+  </div>
+</div>
+
+<simple-modal title="Matching Sessions">
+  <div class="list-group">
+    <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">
+      {{session.name}}
+    </a>
+  </div>
+</simple-modal>
