--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -37,7 +37,7 @@
           <input type="text" class="form-control" placeholder="Search Sessions" [(ngModel)]="searchTerm"
             name="searchTerm">
         </div>
-        <button class="btn btn-default">
+        <button class="btn btn-default" modal-trigger="searchResults">
           Search
         </button>
       </form>
@@ -45,7 +45,7 @@
   </div>
 </div>
 
-<simple-modal title="Matching Sessions">
+<simple-modal elementId="searchResults" title="Matching Sessions">
   <div class="list-group">
     <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">
       {{session.name}}
